<resources>
    <string name="app_name">Assignment2</string>
    <string name="action_settings">Settings</string>
    <string name="mr">Mr</string>
    <string name="ms">Ms</string>
    <string name="mrs">Mrs</string>
    <string name="dr">Dr</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="address">Address:</string>
    <string name="province">Province:</string>
    <string name="Country">Country:</string>
    <string name="postal">Postal Code:</string>
    <string name="submitbutton">Submit</string>
</resources>
